public/styles.css
 /* light theme (default) */

 :root {
     --dark: #000000;
     --light: #F1F0F0;
     --background: var(--light);
     --foreground: var(--dark);
     --background-light: #FCFCFC;
     --box-shadow: rgba(0, 0, 0, 0.1);
     --glass-bg: rgba(255, 255, 255, 0.25);
 }

 /* dark theme  */
 .darkmode {
     --background: var(--dark);
     --foreground: var(--light);
     --background-light: #090909;
     --box-shadow: rgba(39, 39, 39, 0.37);
     --glass-bg: rgba(63, 63, 63, 0.25);
 }

 html,
 body {
     background-color: var(--background);
     color: var(--foreground);
     /* background-image: -webkit-linear-gradient(-65deg, var(--background) 50%, var(--background-light) 50%); */
     font-family: 'Poppins', sans-serif;
     font-weight: 100;
     font-size: 22px;
     margin: 0;
     padding: 0;
     overflow: scroll;
     scroll-behavior: smooth;
 }

 a {
     text-decoration: none;
     color: var(--foreground);
     position: relative;
     z-index: 1;
     cursor: pointer;
 }


 a::after {
     content: "";
     position: absolute;
     bottom: -2px;
     height: 1px;
     width: 0px;
     left: 0;
     background-color: var(--foreground);
     transition: width 0.5s;
 }

 a:hover::after {
     width: 100%;
 }

 h1 {
     font-size: 6rem;
     font-family: 'Azeret Mono', monospace;
     letter-spacing: -15px;
     margin: 0;
     font-weight: 100;
 }

 .space {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 100vh;
 }

 /* --- Dark theme button animation --- */

 .contrast-icon {
     position: relative;
     overflow: hidden;
     z-index: 1;
     transition: all .5s !important;
     color: var(--foreground);
 }


 .contrast-icon:hover {
     color: var(--background);
     transform: scale(1.1);
 }

 .contrast-icon::before {
     content: "";
     position: absolute;
     z-index: -1;
     background: var(--foreground);
     transform: rotate(45deg);
     height: 200px;
     width: 200px;
     top: 100%;
     right: 100%;
     transition: all .7s;
 }


 .contrast-icon:hover::before {
     top: -30px;
     right: -30px;
 }

 /* ------------------------- */

 .footer {
     text-align: center;
     margin: 0;
     top: 0;
     font-size: 16px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: #5fffdf;
 }

 .hero {
     display: flex;
     flex-direction: column;
     position: relative;
     text-align: center;
     margin-top: 5rem;
 }

 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 3rem;
 }

 .nav-req {
     display: flex;
     align-items: center;
     gap: 0.7rem;
 }

 .logo {
     letter-spacing: 3px;
 }

 ul {
     display: flex;
     align-items: center;
     padding: 0;
     gap: 1rem;
     list-style-type: none;
     text-decoration: none;
 }

 .icons {
     padding: 10px;
     margin: 0.1rem;
     cursor: pointer;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
     transition: transform 0.7s;
 }

 .icons:hover {
     transform: scale(1.2);
 }

 /* ----- PrgoressBar Styles ---START--- */
 .progressBar {
     display: flex;
     justify-content: center;
     gap: 5px;
     flex-wrap: wrap;
     align-items: baseline;
 }

 .wrapper {
     width: 50vw;
 }


 /* ----- PrgoressBar Styles ---END--- */


 .notification {
     position: relative;
 }

 .paused {
     position: absolute;
     width: 100%;
     margin: 0;
     top: -6px;
     opacity: 0;
     transition: all 0.5s ease-in-out;
 }

 .break {
     position: absolute;
     margin: 0;
     width: 100%;
     top: -36px;
     opacity: 0%;
     transition: all 0.5s ease-in-out;
 }

 .editInput {
     gap: 0.1rem;
     justify-content: center;
     position: absolute;
     width: 100%;
     margin: 0;
     top: 195px;
     z-index: 1;
     opacity: 0%;
     transition: all 0.5s ease-in-out;
 }

 .editInput-active {
     top: 215px;
     opacity: 100%;
 }

 .input {
     width: 60px;
     height: 35px;
     line-height: 28px;
     padding: 0 0.5rem;
     border: 2px solid transparent;
     outline: none;
     border-radius: 5px;
     background-color: transparent;
     box-shadow: 0px 10px 15px -3px var(--box-shadow);
     color: var(--foreground);
     transition: .3s ease;

 }

 .input::placeholder {
     color: #9e9ea7;
 }

 .submitBtn {
     padding: 0;
     height: 40px;
     width: 90px;
 }

 .input:focus,
 input:hover,
 button:hover {
     outline: none;
     border-color: var(--foreground);
     background-color: transparent;
     box-shadow: 0 0 0 4px var(--box-shadow);
 }

 .break-active {
     display: block;
     top: -46px;
     opacity: 100%;
 }

 .paused-active {
     display: block;
     top: -16px;
     opacity: 100%;
 }

 .main {
     position: relative;
     width: max-content;
     margin: 0 auto;
 }

 .quote {
     text-align: center;
     margin-bottom: 4rem;
     font-size: 14px;
     padding: 0 25%;
     z-index: 1;
 }

 .parent {
     position: relative;
 }

 .clockSpline {
     z-index: 0;
     display: block;
     right: 0;
     top: 0;
     position: absolute;
 }

 .about-container {
     margin: 0 30%;
     font-size: 0.8rem;
     font-weight: 200;
     animation: paragraph 1s ease-in-out;
 }

 .paragraph {
     margin: 2rem 0 0 0;
 }


 .paragraph p {
     border-left: var(--foreground) 1px solid;
     padding-left: 1rem;
     text-align: justify;
 }

 /* contact page */
 .info {
     text-align: center;
 }

 .info input {
     background-color: var(--background);
     color: var(--foreground);
     border: 0px;
     cursor: unset;
     width: 400px;
     height: 1.5rem;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);

 }

 .alertNotif {
     z-index: 1;
     position: absolute;
     font-size: .5rem;
     display: flex;
     justify-content: space-between;
     width: 300px;
     height: 50px;
     padding: 0rem 0.2rem;
     overflow: scroll;
     /* glass effect */
     background: var(--glass-bg);
     box-shadow: 0 0px 1px 0 var(--box-shadow);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     /* ------------ */
     top: 4rem;
     right: 1rem;
 }

 .alertNotif::-webkit-scrollbar {
     display: none;
 }

 .alertNotif-closed {
     display: none;
 }

 .notif-icon {
     padding: 2px;
     width: 25px;
     height: 25px;
 }

 @media (max-width: 1524px) {
     .clockSpline {
         transform: scale(0.8) translateX(200px);
         transform-origin: top;
     }

     .wrapper {
         max-width: 50vw;
     }
 }

 @media (max-width: 1100px) {
     .clockSpline {
         transform: scale(0.8) translateX(500px);
         transform-origin: top;
     }
 }

 @media (max-width: 650px) {
     .clockSpline {
         transform: scale(0.7) translateX(900px) translateY(100px);
     }

 }



 @media (min-width:600px) {

     .menu-btn,
     .close-menu {
         display: none;
     }
 }

 @media (max-width:600px) {

     .alertNotif {
         margin-left: auto;
         margin-right: auto;
         left: 0;
         right: 0;
     }

     .quote {
         text-align: center;
         font-size: 12px;
         overflow: hidden;
         padding: 0 15%;
     }

     h1 {
         font-size: 5rem;
     }

     ul {
         display: block;
         transform: translateX(300px);
         transition: transform 0.5s ease-in-out, visibility 0.5s;
         visibility: hidden;
         position: fixed;
         top: 0;
         right: 0;
         /* ---- glass effect ----- */
         background: var(--glass-bg);
         box-shadow: 0 0px 1px 0 var(--box-shadow);
         backdrop-filter: blur(4px);
         -webkit-backdrop-filter: blur(4px);
         border-top-left-radius: 10px;
         border: 1px solid rgba(255, 255, 255, 0.18);
         /* ----------------------- */
         height: 100%;
         z-index: 2;
         width: 40%;
     }

     .nav-req .active {
         transform: translateX(0px);
         transition: transform 0.5s ease-in-out, visibility 0s;
         visibility: visible;
     }

     ul li {
         margin: 1rem;
     }

     .close-menu {
         margin: 1rem 0 0 1rem;
         cursor: pointer;
     }

     .nav {
         padding: 1rem;
     }
 }

